# AnimationUnity

3d pose App/: CMakeLists.txt
3d pose App/scripts/: visualization.py
3d pose App/src/: cam3d2.py  webcam3d2.py
Unity App/Assets/: Pos_txt_Reader1.cs
Unity App/Assets/Editor/: FullBodyIKEditorUtility.cs  FullBodyIKInspector.cs
Unity App/Assets/Extensions/Scripts/: FullBodyIKUnityChan.cs  FullBodyIKUnityChanBehaviour.cs
Unity App/Assets/Scripts/: FullBodyIK.cs  FullBodyIKBehaviour.cs  FullBodyIKBehaviourBase.cs
